--- a/styles/profile-page-styles.css
+++ b/styles/profile-page-styles.css
@@ -18,7 +18,7 @@
 
 /* CONTENT LEFT SIDE STYLING -- -- -- */
 .content-left-side {
-    top: 0; /* Or any other offset value */
+    top: 0;
     width: 20%;
     height: 100vh;
     display: flex;
@@ -62,6 +62,10 @@
     flex-direction: column;
     justify-content: center;
     gap: 30px;
+}
+
+.basic-info-container h3, h5 {
+    word-wrap: break-word;
 }
 
 .basic-info-container h5 {
@@ -179,7 +183,6 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    gap: 50px;
 }
 
 .performance-metrics-container table {
@@ -253,3 +256,57 @@
     margin-bottom: 10px;
 }
 
+.research-documents-container, .evaluations-container, .event-participation-container {
+    overflow-x: auto;
+    width: 100%;
+    height: auto;
+    margin-bottom: 50px;
+}
+
+/* RESPONSIVE DESIGN -- -- -- */
+@media (max-width: 500px) {
+    .content {
+      width: 90%;
+      height: auto;
+      margin-top: 40px;
+      margin-bottom: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 60px;
+    }
+  
+    .content-left-side {
+        top: 0;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 35px;
+    }
+  
+    .basic-info-container h3, h5 {
+      font-size: 1.2rem;
+    }
+  
+    .content-right-side {
+        width: 100%; 
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
+        gap: 60px;
+    }
+  
+    .title h1 {
+      font-size: 2rem;
+    }
+}
+
+@media (max-width: 593px) and (min-width: 501px) {
+    .basic-info-container h3, h5 {
+      font-size: .8rem;
+    }
+}
