--- a/styles/profile-page-styles.css
+++ b/styles/profile-page-styles.css
@@ -310,3 +310,13 @@
       font-size: .8rem;
     }
 }
+
+@media (max-width: 376px) {
+    .basic-info-container h3, h5 {
+      font-size: .9rem;
+    }
+
+    .progress-bars-container h4, h5 {
+      font-size: .9rem;
+    }
+}
